Mon Jan 31 14:45:47 2011  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/locale.rb (IRB::Locale::#search_file):
	  Gem might be undefined if --disable-gems. [ruby-core:34990]

Mon Jan 31 04:45:12 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): call ARY_SET_LEN(ary, 0) before
	  rb_resize_capa because rb_resize_capa expects resized length is
	  smaller than current array length. call rb_ary_unshare before
	  rb_resize_capa because rb_resize_capa losts the reference to
	  original shared array. [ruby-core:34997]

Sun Jan 30 16:15:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_dl2.rb (TestDL#test_sin): math functions do not
	  work on x86_64 due to the design of DL2.

	* test/dl/test_func.rb (DL::TestFunc#test_{sinf,sin): ditto.

Sun Jan 30 15:13:19 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): 7bit range is also leading
	  byte.

Sun Jan 30 12:53:38 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/emacs_mule.c (emacsmule_islead): fix inverse condition.

Sun Jan 30 08:02:55 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: Mac OS X wrongly reports it has fdatasync(3).

Fri Feb 18 19:31:31 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::remove_entry_secure): there is a
	  race condition in the case where the given path is a directory,
	  and some other user can move that directory, and create a
	  symlink while this method is executing.
	  Reported by: Nicholas Jefferson <nicholas at pythonic.com.au>

Sat Jan 29 22:16:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_join): [].join.encoding must be US-ASCII.
	  [ruby-list:47790]

Fri Jan 28 12:05:48 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: Add #include<sys/stat.h> when struct stat is
	  tested. Otherwise, incomplete type dereference error will occur.

Fri Jan 28 02:37:18 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
